examples/high-quality-code/coupling/coupling-types/good/object/a-module.mjs
export class Shape {
  #width;
  #height;

  constructor(width, height) {
    this.#width = width;
    this.#height = height;
  }

  area() {
    return this.#width * this.#height;
  }
}
